--- a/Quality/Quality/Areas/BulkFGT/Views/PerspirationFastness/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/PerspirationFastness/Index.cshtml
@@ -249,7 +249,7 @@
 
                                 <tr class="@trClass">
                                     <th><h4>Report No</h4></th>
-                                    <th><h4>Test Date</h4></th>
+                                    <th><h4>Reprot Date</h4></th>
                                     <th><h4>Article</h4></th>
                                     <th><h4>Result</h4></th>
                                     <th><h4>Inspector</h4></th>
