--- a/Quality/Quality/Areas/BulkFGT/Views/FabricColorFastness/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricColorFastness/Detail.cshtml
@@ -213,7 +213,7 @@
                                         @Html.HiddenFor(o => o.Main.POID)
                                     </td>
 
-                                    <td style="width: 10vw;"><h5>TestDate</h5></td>
+                                    <td style="width: 10vw;"><h5>ReprotDate</h5></td>
 
                                     <td style="width: 15vw;">
                                         @Html.TextBoxFor(o => Model.Main.InspDate, "{0:yyyy/MM/dd}", new { @class = "date-picker" })
@@ -326,6 +326,14 @@
                                         @Html.HiddenFor(o => o.Main.Status)
                                     </td>
                                 </tr>
+                                <tr>
+                                    <td><h5>Approver</h5></td>
+                                    <td>
+                                        @Html.TextBoxFor(modelItem => Model.Main.Approver, new { @style = "width:30%", @class = "inputApprover", @disabled = "disabled" })
+                                        @Html.TextBoxFor(modelItem => Model.Main.ApproverName, new { @style = "width:55%", @disabled = "disabled" })
+                                        <input id="btnApproverSelectItem" type="button" class="OnlyEdit site-btn btn-blue btnApproverSelectItem" style="margin:0;border:0;" value="..." />
+                                    </td>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
@@ -334,7 +342,7 @@
                             <thead>
                                 <tr>
 
-                                    <th><h4>Submit Date</h4></th>
+                                    <th><h4>Receive Date</h4></th>
                                     <th><h4>Body</h4></th>
                                     <th><h4>SEQ#</h4></th>
                                     <th><h4>Roll#</h4></th>
@@ -822,7 +830,7 @@
         if (EditMode) {
             $("#Edit, #Encode, #Amend, #Excel, #PDF ,#SendMail").removeClass("IsEditMode");
             $('#Save, #New').addClass("IsEditMode");
-            $(".DataTable input, .DataTable select").removeAttr("disabled");
+            $(".DataTable input, .DataTable select,.inputApprover").removeAttr("disabled");
             $('#Encode, #Amend, #Excel, #PDF ,#SendMail').unbind('click');
             $(".DetailTable img").removeClass('display-None');
             DetailButtonBind();
@@ -832,7 +840,7 @@
         else {
             $(".DetailTable img").addClass('display-None');
             $('#Save').unbind('click').removeClass("IsEditMode");
-            $(".DataTable input, .DataTable select").attr("disabled", "disabled");
+            $(".DataTable input, .DataTable select,.inputApprover").attr("disabled", "disabled");
             $('#Excel, #PDF ,#SendMail').addClass("IsEditMode");
 
             if ($('#Main_Status').val() == "New") {
@@ -852,6 +860,45 @@
     }
 
     function DetailButtonBind() {
+
+               $('.inputApprover').unbind('blur').on('blur', function () {
+           var targetID = $(this).closest('tr').attr('idx');
+
+           if ($(this).val() == "") {
+               $("#Main_Approver").val('');
+               $("#Main_ApproverName").val('');
+               return;
+           }
+
+           $.ajax({
+               url: "@Url.Action("Pass1List", "PublicWindow",new { Area=""})",
+               type: 'POST',
+               contentType: "application/json; charset=utf-8",
+               data: JSON.stringify({ ID: $(this).val(), ReturnType: "JSON" }),
+               async: true,
+               success: function (data) {
+                   if (data.length == 0) {
+                       $("#Main_Approver").val('');
+                       $("#Main_ApproverName").val('');
+                       msg.WithError('Approver Not Found');
+                   }
+                   else {
+                       $("#Main_Approver").val(data[0].ID);
+                       $("#Main_ApproverName").val(data[0].Name);
+                   }
+               },
+               error: function (xhr, ajaxOptions, thrownError) {
+                   console.log(xhr.responseText);
+               }
+           });
+       });
+
+       $('.btnApproverSelectItem').unbind('click').on('click', function () {
+           var targetID ='Main_Approver';
+           var para = "?TargetID=" + targetID;
+           window.open('@Url.Action("Pass1List", "PublicWindow",new{Area=""})' + para, 'Roll', config = 'toolbar=no,status=no,location=no,width=950,height=650');
+       });
+
         $('#btnDetailArticleSelectItem').on('click', function () {
             var para = "?OrderID=" + $('#Main_POID').val() + "&StyleUkey=0";
             window.open('@Url.Action("PoidArticleList", "PublicWindow",new{Area=""})' + para, 'Article', config = 'toolbar=no,status=no,location=no,width=400,height=650');
@@ -1048,7 +1095,7 @@
             }
 
             if ($('#Main_InspDate').val() == "") {
-                msg.WithWarning("Test Date cannot be empty.");
+                msg.WithWarning("Report Date cannot be empty.");
                 return;
             }
 
@@ -1588,10 +1635,16 @@
         $('#Main_Article').val(data);
     }
 
-    function GetPass1(data) {
-
-        $('#Main_Inspector').val(data.ID);
-        $('#Main_InspectionName').val(data.Name );
+    function GetPass1(data, targetID) {
+        if (targetID.includes('Main_Approver'))
+        {
+            $(`#${targetID}`).val(data.ID);
+            $(`#${targetID}Name`).val(data.Name);
+        }
+        else {
+            $('#Main_Inspector').val(data.ID);
+            $('#Main_InspectionName').val(data.Name);
+        }
     }
 
     function GetPo_Supp_Detail(data, TargetID) {
