--- a/Quality/Quality/Areas/BulkFGT/Views/FabricColorFastness/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricColorFastness/Index.cshtml
@@ -250,7 +250,7 @@
                             @{
                                 <tr>
                                     <th><h4>Report No</h4></th>
-                                    <th><h4>Test Date</h4></th>
+                                    <th><h4>Report Date</h4></th>
                                     <th><h4>Article</h4></th>
                                     <th><h4>Result</h4></th>
                                     <th><h4>Inspector</h4></th>
