--- a/Quality/Quality/Areas/BulkFGT/Views/TPeelStrengthTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/TPeelStrengthTest/Index.cshtml
@@ -386,7 +386,7 @@
                     </div>
 
                     <div class="MainAreaItem odd">
-                        <h4 class="colTitle">Submit Date</h4>
+                        <h4 class="colTitle">Receive Date</h4>
 
                     </div>
 
@@ -402,7 +402,7 @@
                     </div>
 
                     <div class="MainAreaItem odd">
-                        @Html.TextBoxFor(o => o.Main.ReportDateText, new { @class = "" })
+                        @Html.TextBoxFor(o => o.Main.ReportDate, "{0:yyyy/MM/dd}", new { @class = "date-picker CanEdit" })
 
                     </div>
 
@@ -547,13 +547,23 @@
                     </div>
 
                     <div class="MainAreaItem even">
+                        <h4 class="colTitle">Approver</h4>
                     </div>
                     <div class="MainAreaItem even">
-                    </div>
-                    <div class="MainAreaItem even">
+                        @Html.TextBoxFor(modelItem => Model.Main.Approver, new { @style = "width:30%", @class = "inputApprover", @disabled = "disabled" })
+                        @Html.TextBoxFor(modelItem => Model.Main.ApproverName, new { @style = "width:55%", @disabled = "disabled" })
+                        <input id="btnApproverSelectItem" type="button" class="CanEdit site-btn btn-blue btnApproverSelectItem" style="margin:0;border:0;" value="..." />
 
                     </div>
+
                     <div class="MainAreaItem even">
+                        <h4 class="colTitle">Preparer</h4>
+                    </div>
+                    <div class="MainAreaItem even">
+                        @Html.TextBoxFor(modelItem => Model.Main.Preparer, new { @style = "width:30%", @class = "inputPreparer odd", @disabled = "disabled" })
+                        @Html.TextBoxFor(modelItem => Model.Main.PreparerName, new { @style = "width:55%", @disabled = "disabled", @class = "odd" })
+                        <input id="btnPreparerSelectItem" type="button" class="CanEdit site-btn btn-blue btnPreparerSelectItem" style="margin:0;border:0;" value="..." />
+
                     </div>
 
                     <!-- #endregion -->
@@ -691,7 +701,7 @@
                 // 可編輯欄位開啟
                 $('.CanEdit').removeAttr("disabled");
                 $('.CanEdit').removeAttr("readonly");
-
+                $('.inputApprover,.inputPreparer').removeAttr("disabled");
                 if ($("#Main_Status").val() != '') {
                     $('#Main_OrderID').attr("readonly", "readonly");
                 }
@@ -701,14 +711,14 @@
                 $(".detailDelete").show();
                 $("#Main_SubmitDateText").addClass('date-picker');
                 $('.date-picker').datepicker({ changeYear: true, changeMonth: true, currentText: "Now" });
-
+                DetailButtonBind();
             }
             else {
                 // 可編輯欄位關閉
                 $('.MainArea select ,.DetailDataAreaItem1 select ,.DetailDataAreaItem2 select').attr("disabled", true);
                 $('.MainArea input ,.MainArea textarea ,.DetailDataAreaItem1 input ,.DetailDataAreaItem2 input').attr("readonly", "readonly");
                 $(".detailDelete").hide();
-
+                $(".inputApprover,.inputPreparer").attr("disabled", "disabled");
 
                 // 未Confirmed可用功能開啟
                 if ($("#Main_Status").val() == 'New') {
@@ -727,7 +737,89 @@
         // 移除不可用功能的事件
         $('.toolBarItem:not(.canUse)').unbind('click');
     }
+        function DetailButtonBind()
+    {
+        $('.inputPreparer').unbind('blur').on('blur', function () {
+            var targetID = $(this).closest('tr').attr('idx');
 
+            if ($(this).val() == "") {
+                $("#Main_Preparer").val('');
+                $("#Main_PreparerName").val('');
+                return;
+            }
+
+            $.ajax({
+                url: "@Url.Action("Pass1List", "PublicWindow",new { Area=""})",
+                type: 'POST',
+                contentType: "application/json; charset=utf-8",
+                data: JSON.stringify({ ID: $(this).val(), ReturnType: "JSON" }),
+                async: true,
+                success: function (data) {
+                    if (data.length == 0) {
+                        $("#Main_Preparer").val('');
+                        $("#Main_PreparerName").val('');
+                        msg.WithError('Approver Not Found');
+                    }
+                    else {
+                        $("#Main_Preparer").val(data[0].ID);
+                        $("#Main_PreparerName").val(data[0].Name);
+                    }
+                },
+                error: function (xhr, ajaxOptions, thrownError) {
+                    console.log(xhr.responseText);
+                }
+            });
+        });
+
+        $('.btnPreparerSelectItem').unbind('click').on('click', function () {
+            var targetID ='Main_Preparer';
+            var para = "?TargetID=" + targetID;
+            window.open('@Url.Action("Pass1List", "PublicWindow",new{Area=""})' + para, 'Roll', config = 'toolbar=no,status=no,location=no,width=950,height=650');
+        });
+        $('.inputApprover').unbind('blur').on('blur', function () {
+            var targetID = $(this).closest('tr').attr('idx');
+
+            if ($(this).val() == "") {
+                $("#Main_Approver").val('');
+                $("#Main_ApproverName").val('');
+                return;
+            }
+
+            $.ajax({
+                url: "@Url.Action("Pass1List", "PublicWindow",new { Area=""})",
+                type: 'POST',
+                contentType: "application/json; charset=utf-8",
+                data: JSON.stringify({ ID: $(this).val(), ReturnType: "JSON" }),
+                async: true,
+                success: function (data) {
+                    if (data.length == 0) {
+                        $("#Main_Approver").val('');
+                        $("#Main_ApproverName").val('');
+                        msg.WithError('Approver Not Found');
+                    }
+                    else {
+                        $("#Main_Approver").val(data[0].ID);
+                        $("#Main_ApproverName").val(data[0].Name);
+                    }
+                },
+                error: function (xhr, ajaxOptions, thrownError) {
+                    console.log(xhr.responseText);
+                }
+            });
+        });
+
+        $('.btnApproverSelectItem').unbind('click').on('click', function () {
+            var targetID ='Main_Approver';
+            var para = "?TargetID=" + targetID;
+            window.open('@Url.Action("Pass1List", "PublicWindow",new{Area=""})' + para, 'Roll', config = 'toolbar=no,status=no,location=no,width=950,height=650');
+        });
+
+    }
+    function GetPass1(data, targetID)
+    {
+        $(`#${targetID}`).val(data.ID);
+        $(`#${targetID}Name`).val(data.Name);
+    }
     function QueryBind() {
 
         $('#btnQuery').on('click', function () {
