--- a/Quality/Quality/Areas/BulkFGT/Views/WaterFastness/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/WaterFastness/Detail.cshtml
@@ -247,7 +247,7 @@
                                         @Html.HiddenFor(o => o.Main.POID)
                                     </td>
 
-                                    <td style="width: 10vw;"><h5>TestDate</h5></td>
+                                    <td style="width: 10vw;"><h5>Reprot Date</h5></td>
 
                                     <td style="width: 15vw;">
                                         @Html.TextBoxFor(o => Model.Main.InspDate, "{0:yyyy/MM/dd}", new { @class = "date-picker" })
@@ -323,7 +323,14 @@
                                     </td>
 
                                 </tr>
-
+                                <tr>
+                                    <td><h5>Approver</h5></td>
+                                    <td>
+                                        @Html.TextBoxFor(modelItem => Model.Main.WaterFastnessApprover, new { @style = "width:30%", @class = "inputApprover", @disabled = "disabled" })
+                                        @Html.TextBoxFor(modelItem => Model.Main.WaterFastnessApproverName, new { @style = "width:55%", @disabled = "disabled" })
+                                        <input id="btnApproverSelectItem" type="button" class="site-btn btn-blue btnApproverSelectItem" style="margin:0;border:0;" value="..." />
+                                    </td>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
@@ -333,7 +340,7 @@
                             <thead>
                                 <tr>
 
-                                    <th><h4>Submit Date</h4></th>
+                                    <th><h4>Receive Date</h4></th>
                                     <th><h4>Group</h4></th>
                                     <th><h4>SEQ#</h4></th>
                                     <th><h4>Roll#</h4></th>
@@ -643,7 +650,7 @@
         if (EditMode) {
             $("#Edit, #Encode, #Amend, #Excel, #PDF ,#SendMail").removeClass("IsEditMode");
             $('#Save, #New').addClass("IsEditMode");
-            $(".DataTable input[type='text'], .DataTable input[type='number'], .DetailTable select, .HeaderSelect").removeAttr("disabled");
+            $(".DataTable input[type='text'], .DataTable input[type='number'], .DetailTable select, .HeaderSelect,.inputApprover").removeAttr("disabled");
             $('#Encode, #Amend, #Excel, #PDF ,#SendMail').unbind('click');
             $(".DetailTable img").removeClass('display-None');
             DetailButtonBind();
@@ -653,7 +660,7 @@
         else {
             $(".DetailTable img").addClass('display-None');
             $('#Save').unbind('click').removeClass("IsEditMode");
-            $(".DataTable input[type='text'], .DataTable input[type='number'], .DetailTable select, .HeaderSelect").attr("disabled", "disabled");
+            $(".DataTable input[type='text'], .DataTable input[type='number'], .DetailTable select, .HeaderSelect,.inputApprover").attr("disabled", "disabled");
             $('#Excel, #PDF ,#SendMail').addClass("IsEditMode");
             if ($('#Main_Status').val() == "New") {
                 $('#Edit, #Encode').addClass("IsEditMode");
@@ -672,7 +679,47 @@
         $('#Picture').addClass("IsEditMode");
     }
 
-    function DetailButtonBind() {
+    function DetailButtonBind()
+    {
+        $('.inputApprover').unbind('blur').on('blur', function ()
+        {
+            var targetID = $(this).closest('tr').attr('idx');
+
+            if ($(this).val() == "") {
+                $("#Main_WaterFastnessApprover").val('');
+                $("#Main_WaterFastnessApproverName").val('');
+                return;
+            }
+
+            $.ajax({
+                url: "@Url.Action("Pass1List", "PublicWindow",new { Area=""})",
+                type: 'POST',
+                contentType: "application/json; charset=utf-8",
+                data: JSON.stringify({ ID: $(this).val(), ReturnType: "JSON" }),
+                async: true,
+                success: function (data) {
+                    if (data.length == 0) {
+                        $("#Main_WaterFastnessApprover").val('');
+                        $("#Main_WaterFastnessApproverName").val('');
+                        msg.WithError('Approver Not Found');
+                    }
+                    else {
+                        $("#Main_WaterFastnessApprover").val(data[0].ID);
+                        $("#Main_WaterFastnessApproverName").val(data[0].Name);
+                    }
+                },
+                error: function (xhr, ajaxOptions, thrownError) {
+                    console.log(xhr.responseText);
+                }
+            });
+        });
+
+        $('.btnApproverSelectItem').unbind('click').on('click', function ()
+        {
+            var targetID ='Main_WaterFastnessApprover';
+            var para = "?TargetID=" + targetID;
+            window.open('@Url.Action("Pass1List", "PublicWindow",new{Area=""})' + para, 'Roll', config = 'toolbar=no,status=no,location=no,width=950,height=650');
+        });
         $('#btnDetailArticleSelectItem').on('click', function () {
                 var para = "?OrderID=" + $('#Main_POID').val() + "&StyleUkey=0";
                  window.open('@Url.Action("PoidArticleList", "PublicWindow",new{Area=""})' + para,'Article',config='toolbar=no,status=no,location=no,width=400,height=650');
@@ -1346,9 +1393,19 @@
         $('#Main_Article').val(data);
     }
 
-    function GetPass1(data) {
-        $('#Main_Inspector').val(data.ID);
-        $('#Main_InspectorName').val(data.Name);
+    function GetPass1(data, targetID) {
+        debugger;
+        if (targetID.includes('Main_WaterFastnessApprover'))
+        {
+            $(`#${targetID}`).val(data.ID);
+            $(`#${targetID}Name`).val(data.Name);
+        }
+        else
+        {
+            $('#Main_Inspector').val(data.ID);
+            $('#Main_InspectorName').val(data.Name);
+        }
+
     }
 
     function GetPo_Supp_Detail(data, TargetID) {
